# NativeUI-swift-bridge

./: .gitignore  README.md
swiftbridge/: arraytools.swift  swiftbridge.swift
swiftbridge.xcodeproj/: project.pbxproj
swiftbridge/appkit/: app_modify.swift  app_run.swift  nsscreen.swift
swiftbridge/swiftbridge.docc/: swiftbridge.md
swiftbridgeTests/: swiftbridgeTests.swift
swiftbridgeTests/rustbridge_tests/: Cargo.toml  README.md  build.rs
swiftbridgeTests/rustbridge_tests/src/: error.rs  ffi.rs  lib.rs
swiftbridgeTests/rustbridge_tests/src/appkit/: app_modify.rs  app_run.rs  mod.rs  nsscreen.rs
